# adam-v2x

./: .dockerignore  .gitignore  AIOT2026.bib  README.md  doc.md  docker-compose.yml  group_meeting_slides.md  main.tex  manage_build.sh  max_SQ.py  plot_master.py  plot_periodic_recovery.py  plot_pulse_recovery.py  refs.bib  run_experiments.sh  setup.sh  terminal_result.txt  testing.txt  vanetza_setup.sh
Uniform Random Attack/: qos_statistics_table.csv
checkpoints/: online_training_telemetry.csv  online_training_telemetry_discrete_ppo.csv  training_progress.csv  training_progress_discrete_ppo.csv  v2x_agent_discrete_ppo.onnx.data  v2x_agent_dqn.onnx.data  v2x_offline_rmix_e20.pth  v2x_online_brain.pth  v2x_online_brain_discrete_ppo.pth  v2x_online_brain_dqn.pth  v2x_ppo_agent.onnx.data
docker/: Dockerfile  README.md
inputs/: README.md
vanetza_patched/tools/qos-harness/: CMakeLists.txt  README.md  plot_qos.py  pre_filter.cpp  qos_measure.cpp  run_experiments.sh
vanetza_patched/tools/qos-harness/csv_data/: amplification_profile.csv  qos_baseline.csv
vanetza_patched/tools/qos-harness/include/qos_harness/: amplification_profiler.hpp  console_presenter.hpp  dataset_builder.hpp  file_manager.hpp  pre_filter.hpp  rl_bridge.hpp  traffic_generator.hpp
vanetza_patched/tools/qos-harness/result/: local_qos_statistics_Patched.csv
vanetza_patched/tools/qos-harness/src/: amplification_profiler.cpp  console_presenter.cpp  file_manager.cpp  harness_engine.cpp  main.cpp  metrics_collector.cpp  pre_filter.cpp  rl_bridge.cpp  traffic_generator.cpp
vanetza_patched/tools/qos-harness/tests/: test_presenter.cpp
vanetza_unpatched/tools/qos-harness/: CMakeLists.txt  README.md  depth_hook.c  perf_out.txt  pre_filter.cpp  pre_filter.hpp  qos_measure.cpp  run_experiments.sh
vanetza_unpatched/tools/qos-harness/csv_data/: amplification_profile.csv  qos_attack.csv  qos_attack_100.0_mode0_filtered.csv  qos_baseline.csv
vanetza_unpatched/tools/qos-harness/include/qos_harness/: console_presenter.hpp  harness_engine.hpp  metrics_collector.hpp  pre_filter.hpp  queue_simulator.hpp  rl_bridge.hpp  traffic_generator.hpp
vanetza_unpatched/tools/qos-harness/result/: local_qos_statistics_Unpatched.csv
vanetza_unpatched/tools/qos-harness/src/: console_presenter.cpp  dataset_builder.cpp  file_manager.cpp  main.cpp  metrics_collector.cpp  pre_filter.cpp  queue_simulator.cpp  rl_bridge.cpp  router_fuzzing_context.cpp  traffic_generator.cpp
(+81 files in other folders)
